tests/typecheck/should_fail/CustomTypeErrors01.stderr

CustomTypeErrors01.hs:12:11: error: [GHC-64725]
    • Values of type 'MyType' cannot be compared for equality.
    • In the expression: x == MyType
      In an equation for ‘err’: err x = x == MyType
